# network-api

./: .env.example  Dockerfile  README.md  app.py  index.html  pyproject.toml
.github/workflows/: publish_docker_image.yml  tests.yml
network_api/: config.py
network_api/routers/: __init__.py
network_api/routers/path/: models.py  routes.py
tests/: conftest.py  test_routes_shortest_path.py
