[tool.poetry]
name = "network-api"
version = "0.0.6"
description = ""
authors = ["amauryval <amauryval@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
python-dotenv = "1.0.0"
gunicorn = "20.1.0"
uvicorn = "^0.21.1"
starlite = "^1.51.10"
osmrx = "0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
